fix css gap bug + add demo to README

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -34,7 +34,6 @@ body {
 	flex-direction: column;
 	align-items: center;
 	min-width: 100%;
-	gap: 8rem;
 }
 
 h1,
@@ -79,6 +78,12 @@ footer {
 	background: url("../images/transparency.png");
 	background-size: cover;
 	padding: 1rem 3rem;
+}
+
+footer,
+#team-section,
+#favourites {
+	margin-top: 8rem;
 }
 
 .nav-brand-name,
@@ -372,6 +377,7 @@ footer {
 
 .favImg {
 	border-radius: 15px;
+	max-width: 100%;
 }
 
 .favourites-tile {
@@ -379,9 +385,11 @@ footer {
 	flex-direction: column;
 	gap: 1.5rem;
 	text-align: center;
-	background: url("../images/transparency.png");
+	/* background: url("../images/transparency.png"); */
 	padding-bottom: 1rem;
 	border-radius: 15px;
+	flex-wrap: wrap;
+	max-width: 300px;
 }
 
 /* Team section */
